--- a/assets/style/style.less
+++ b/assets/style/style.less
@@ -6,6 +6,90 @@ body {
 .portfolio {
   display: flex;
 }
-
 @import "blocks/projects.less";
 @import "blocks/sidebar.less";
+@media only screen and (max-width: 992px) {
+  .portfolio {
+
+    display: block;
+
+    .sidebar {
+      height: 130px;
+      .content {
+        .name,
+        .surname {
+          text-transform: uppercase;
+          font-weight: 700;
+          font-size: 24px;
+          letter-spacing: 3px;
+        }
+        .surname {
+          font-size: 18px;
+        }
+        .specialization {
+          font-weight: 300;
+          letter-spacing: 2px;
+          font-size: 14px;
+        }
+        .social {
+          padding-top: 10px;
+          img {
+            width: 20px;
+          }
+        }
+      }
+    }
+    .projects {
+      overflow: unset;
+
+      .project__item {
+        width: 100%;
+        flex-basis: unset;
+    }
+  }
+}
+
+}
+
+@media only screen and (max-width: 500px) {
+  .projects { 
+    .project__item {
+      .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        span {
+          opacity: 0.8;
+          font-size: 12px;
+        }
+        .info {
+          font-size: 16px;
+       
+          .date, .technology {
+            font-size: 14px;
+          }
+        }
+        .btn {
+          margin-top: 10px;
+          margin-bottom: 10px;
+          .show__project {
+            font-size: 14px;
+            background-color: #22A9E0;
+            padding: 5px 10px;
+            box-shadow: 2px 3px 1px #076AC3;
+            text-decoration: none;
+            color: #fff;
+            transition: background-color 0.15s linear;
+            &:hover {
+            background-color: darken(#22A9E0, 10%);
+            box-shadow: 2px 3px 1px darken(#076AC3, 10%);
+            }
+        }
+        
+        }
+      }
+    }
+  }
+  
+}
+
