--- a/assets/style/blocks/projects.less
+++ b/assets/style/blocks/projects.less
@@ -31,12 +31,14 @@
       span {
         opacity: 0.8;
       }
-      .info {
-        font-size: 18px;
+      .project__info {
         max-width: 300px;
         overflow: hidden;
         text-overflow: ellipsis;
-        .date, .technology {
+        .project__name {
+          font-size: 18px;
+        }
+        .project__date, .project__technology {
           font-size: 16px;
         }
       }
