--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Kanit", sans-serif;
+  background-color: #efefef;
 }
 .portfolio {
   display: -webkit-box;
