--- a/assets/style/blocks/sidebar.less
+++ b/assets/style/blocks/sidebar.less
@@ -19,6 +19,11 @@
       font-size: 34px;
       letter-spacing: 3px;
     }
+    .mail {
+      font-weight: 300;
+      font-size: 14px;
+      margin-top: 5px;
+    }
     .surname {
       font-size: 24px;
     }
