--- a/assets/style/blocks/projects.less
+++ b/assets/style/blocks/projects.less
@@ -1,6 +1,5 @@
 // main: ../style.less
 
-
 .projects {
   flex-basis: 75%;
   height: 100vh;
@@ -9,7 +8,7 @@
   .project__items {
     display: flex;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 10px;
   }
   .project__item {
     flex-basis: calc(50% - 30px);
@@ -32,26 +31,27 @@
         opacity: 0.8;
       }
       .project__info {
-        max-width: 300px;
+        max-width: 400px;
         overflow: hidden;
         text-overflow: ellipsis;
         .project__name {
           font-size: 18px;
         }
-        .project__date, .project__technology {
+        .project__date,
+        .project__technology {
           font-size: 16px;
         }
       }
       .show__project {
-        background-color: #22A9E0;
+        background-color: #22a9e0;
         padding: 5px 10px;
-        box-shadow: 2px 3px 1px #076AC3;
+        box-shadow: 2px 3px 1px #076ac3;
         text-decoration: none;
         color: #fff;
         transition: background-color 0.15s linear;
         &:hover {
-        background-color: darken(#22A9E0, 10%);
-        box-shadow: 2px 3px 1px darken(#076AC3, 10%);
+          background-color: darken(#22a9e0, 10%);
+          box-shadow: 2px 3px 1px darken(#076ac3, 10%);
         }
       }
     }
