--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,7 +22,7 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 20px;
+  padding: 10px;
 }
 .projects .project__item {
   -ms-flex-preferred-size: calc(50% - 30px);
@@ -54,7 +54,7 @@ body {
   opacity: 0.8;
 }
 .projects .project__item .content .project__info {
-  max-width: 300px;
+  max-width: 400px;
   overflow: hidden;
   -o-text-overflow: ellipsis;
      text-overflow: ellipsis;
@@ -67,10 +67,10 @@ body {
   font-size: 16px;
 }
 .projects .project__item .content .show__project {
-  background-color: #22A9E0;
+  background-color: #22a9e0;
   padding: 5px 10px;
-  -webkit-box-shadow: 2px 3px 1px #076AC3;
-          box-shadow: 2px 3px 1px #076AC3;
+  -webkit-box-shadow: 2px 3px 1px #076ac3;
+          box-shadow: 2px 3px 1px #076ac3;
   text-decoration: none;
   color: #fff;
   -webkit-transition: background-color 0.15s linear;
@@ -124,6 +124,19 @@ body {
 }
 .sidebar .content .social img {
   width: 30px;
+}
+@media only screen and (max-width: 1450px) {
+  .projects .project__item .content span {
+    opacity: 0.8;
+    font-size: 14px;
+  }
+  .projects .project__item .content .project__info .project__date,
+  .projects .project__item .content .project__info .project__technology {
+    font-size: 14px;
+  }
+  .projects .project__item .content .project__info .project__name {
+    font-size: 16px;
+  }
 }
 @media only screen and (max-width: 992px) {
   .portfolio {
