--- a/assets/style/style.less
+++ b/assets/style/style.less
@@ -97,6 +97,7 @@ body {
         .btn {
           margin-top: 15px;
           margin-bottom: 15px;
+          padding: 0;
           text-align: center;
           .show__project {
             font-size: 14px;
